[gd_scene load_steps=9 format=3 uid="uid://dp3fwj5lcdhg4"]

[ext_resource type="PackedScene" uid="uid://esjgg823gu6w" path="res://scenes/bird.tscn" id="1_7gkcw"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_tesu1"]
[ext_resource type="PackedScene" uid="uid://b8wlrwfdblu2a" path="res://scenes/wall.tscn" id="2_b2kgu"]
[ext_resource type="PackedScene" uid="uid://c40yjm86invg3" path="res://scenes/floor.tscn" id="3_q1wjm"]
[ext_resource type="FontFile" uid="uid://cwo2tc2qtq41u" path="res://karmatic-arcade/ka1.ttf" id="5_u16qb"]
[ext_resource type="AudioStream" uid="uid://cuxus6wbg8b5m" path="res://sfx/Hit_Hurt11.wav" id="6_hyjxc"]
[ext_resource type="AudioStream" uid="uid://b6c1gyrg5223p" path="res://sfx/bum.wav" id="7_rp3b4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ve3o4"]
size = Vector2(800, 24)

[node name="Main" type="Node" groups=["walls"]]
script = ExtResource("1_tesu1")
wall_scene = ExtResource("2_b2kgu")

[node name="bird" parent="." instance=ExtResource("1_7gkcw")]
position = Vector2(292, 203)

[node name="floor" parent="." instance=ExtResource("3_q1wjm")]

[node name="Spawner" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="floor hitbox" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor hitbox"]
position = Vector2(400, 588)
shape = SubResource("RectangleShape2D_ve3o4")

[node name="Score" type="Label" parent="."]
modulate = Color(0.980392, 0.580392, 0.584314, 1)
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("5_u16qb")
theme_override_font_sizes/font_size = 50
text = "
"

[node name="gameover" type="CanvasGroup" parent="."]
visible = false
top_level = true
z_index = 1

[node name="Panel" type="Panel" parent="gameover"]
modulate = Color(0.117647, 0.117647, 0.117647, 1)
offset_right = 800.0
offset_bottom = 600.0

[node name="Label" type="Label" parent="gameover"]
modulate = Color(0.980392, 0.580392, 0.584314, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 213.0
offset_top = 271.5
offset_right = 579.0
offset_bottom = 328.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_u16qb")
theme_override_font_sizes/font_size = 80
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hyjxc")
volume_db = -20.0

[node name="ScoreSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rp3b4")
volume_db = -20.0
pitch_scale = 1.65

[connection signal="hit" from="bird" to="." method="bird_hit"]
[connection signal="timeout" from="Spawner" to="." method="_on_spawner_timeout"]
